// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitadelController GET /citadel/v1/accounts returns citadel account data 1`] = `
Object {
  "address": "0xe6487033F5C8e2b4726AF54CA1449FEC18Bd1484",
  "earned": 2518100.0000000005,
  "earnedBtc": 2,
  "lockingEarned": 2518100,
  "lockingRoi": 351558568714.9742,
  "projectedEarnings": Object {
    "0": 0,
    "1": 2575.275,
    "2": 2205438.210898796,
    "3": 0,
  },
  "roi": 351546902355.9754,
  "stakingEarned": 6.244e-10,
  "stakingRoi": 8663.558663558664,
  "value": 0.0000071629133499,
}
`;

exports[`CitadelController GET /citadel/v1/history returns timeframed data for charts 1`] = `
Array [
  Object {
    "address": "0x38724146C8dc1Aa49c3395091cf86B789c37F52c",
    "id": "0x38724146C8dc1Aa49c3395091cf86B789c37F52c",
    "positions": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "apr": 0,
        "balance": 4,
        "decimals": 18,
        "name": "Badger",
        "protocol": "none",
        "symbol": "BADGER",
        "value": 23.4,
      },
      Object {
        "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
        "apr": 0,
        "balance": 0.002,
        "decimals": 8,
        "name": "Wrapped BTC",
        "protocol": "none",
        "symbol": "WBTC",
        "value": 60.194,
      },
      Object {
        "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
        "apr": 0,
        "balance": 0.025,
        "decimals": 18,
        "name": "Wrapped Ether",
        "protocol": "none",
        "symbol": "WETH",
        "value": 50.41375,
      },
      Object {
        "address": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
        "apr": 0,
        "balance": 50,
        "decimals": 6,
        "name": "USD Coin",
        "protocol": "none",
        "symbol": "USDC",
        "value": 50.14999999999999,
      },
      Object {
        "address": "0x853d955aCEf822Db058eb8505911ED77F175b99e",
        "apr": 0,
        "balance": 50,
        "decimals": 18,
        "name": "Frax",
        "protocol": "none",
        "symbol": "FRAX",
        "value": 50.05,
      },
      Object {
        "address": "0xa47c8bf37f92aBed4A126BDA807A7b7498661acD",
        "apr": 0,
        "balance": 62.97449812052163,
        "decimals": 18,
        "name": "Wrapped UST Token",
        "protocol": "none",
        "symbol": "UST",
        "value": 4.013112867228362,
      },
      Object {
        "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
        "apr": 0,
        "balance": 1.00003e-13,
        "decimals": 18,
        "name": "Convex Token",
        "protocol": "none",
        "symbol": "CVX",
        "value": 1.02803084e-12,
      },
      Object {
        "address": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
        "apr": 57.56724452641197,
        "balance": 1,
        "decimals": 18,
        "name": "Badger Sett Convex CRV",
        "protocol": "Badger",
        "symbol": "bcvxCRV",
        "value": 1.7347946415600242,
      },
      Object {
        "address": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
        "apr": 31.48681878583217,
        "balance": 2,
        "decimals": 18,
        "name": "Badger Vested Escrow Convex Token",
        "protocol": "Badger",
        "symbol": "bveCVX",
        "value": 20.5,
      },
      Object {
        "address": "0xaE96fF08771a109dc6650a1BdCa62F2d558E40af",
        "apr": 139.74480236006133,
        "balance": 0.0005,
        "decimals": 18,
        "name": "Badger Sett Curve.fi Factory BTC Metapool: ibBTC",
        "protocol": "Badger",
        "symbol": "bibbtc/sbtcCRV-f",
        "value": 14.889253336268698,
      },
    ],
    "timestamp": 1653251755438,
    "value": 275.3449108450581,
    "yield": 10.263646742319406,
  },
  Object {
    "address": "0x38724146C8dc1Aa49c3395091cf86B789c37F52c",
    "id": "0x38724146C8dc1Aa49c3395091cf86B789c37F52c",
    "positions": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "apr": 0,
        "balance": 4,
        "decimals": 18,
        "name": "Badger",
        "protocol": "none",
        "symbol": "BADGER",
        "value": 23.2,
      },
      Object {
        "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
        "apr": 0,
        "balance": 0.002,
        "decimals": 8,
        "name": "Wrapped BTC",
        "protocol": "none",
        "symbol": "WBTC",
        "value": 58.998000000000005,
      },
      Object {
        "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
        "apr": 0,
        "balance": 0.025,
        "decimals": 18,
        "name": "Wrapped Ether",
        "protocol": "none",
        "symbol": "WETH",
        "value": 49.556000000000004,
      },
      Object {
        "address": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
        "apr": 0,
        "balance": 50,
        "decimals": 6,
        "name": "USD Coin",
        "protocol": "none",
        "symbol": "USDC",
        "value": 50.1,
      },
      Object {
        "address": "0x853d955aCEf822Db058eb8505911ED77F175b99e",
        "apr": 0,
        "balance": 50,
        "decimals": 18,
        "name": "Frax",
        "protocol": "none",
        "symbol": "FRAX",
        "value": 49.9753,
      },
      Object {
        "address": "0xa47c8bf37f92aBed4A126BDA807A7b7498661acD",
        "apr": 0,
        "balance": 62.97449812052163,
        "decimals": 18,
        "name": "Wrapped UST Token",
        "protocol": "none",
        "symbol": "UST",
        "value": 3.143889724060388,
      },
      Object {
        "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
        "apr": 0,
        "balance": 1.00003e-13,
        "decimals": 18,
        "name": "Convex Token",
        "protocol": "none",
        "symbol": "CVX",
        "value": 9.560286800000002e-13,
      },
      Object {
        "address": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
        "apr": 57.324597179856944,
        "balance": 1,
        "decimals": 18,
        "name": "Badger Sett Convex CRV",
        "protocol": "Badger",
        "symbol": "bcvxCRV",
        "value": 1.6914247755210234,
      },
      Object {
        "address": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
        "apr": 32.27236423063117,
        "balance": 2,
        "decimals": 18,
        "name": "Badger Vested Escrow Convex Token",
        "protocol": "Badger",
        "symbol": "bveCVX",
        "value": 19.12,
      },
      Object {
        "address": "0xaE96fF08771a109dc6650a1BdCa62F2d558E40af",
        "apr": 139.96848608236724,
        "balance": 0.0005,
        "decimals": 18,
        "name": "Badger Sett Curve.fi Factory BTC Metapool: ibBTC",
        "protocol": "Badger",
        "symbol": "bibbtc/sbtcCRV-f",
        "value": 14.784913808979702,
      },
    ],
    "timestamp": 1653165354948,
    "value": 270.5695283085621,
    "yield": 10.28729978615088,
  },
]
`;

exports[`CitadelController GET /citadel/v1/leaderboard returns knighting round info 1`] = `
Array [
  Object {
    "funding": 20.99999999601,
    "knight": "Ren",
    "rank": 0,
    "users": 1,
    "voteAmount": 0.99999999981,
    "voteWeight": 39.09073246677608,
  },
  Object {
    "funding": 7.799999999609999,
    "knight": "Frax",
    "rank": 1,
    "users": 2,
    "voteAmount": 0.37142857140999996,
    "voteWeight": 20.93431441213799,
  },
  Object {
    "funding": 5.79999999999,
    "knight": "Tokemak",
    "rank": 2,
    "users": 1,
    "voteAmount": 0.27619047619,
    "voteWeight": 14.528953900279193,
  },
  Object {
    "funding": 5.79999999999,
    "knight": "Convex",
    "rank": 3,
    "users": 1,
    "voteAmount": 0.27619047619,
    "voteWeight": 14.528953900279193,
  },
  Object {
    "funding": 3.99999999924,
    "knight": "Jones DAO",
    "rank": 4,
    "users": 1,
    "voteAmount": 0.19047619044,
    "voteWeight": 10.917045320527533,
  },
  Object {
    "funding": 0,
    "knight": "Alchemix",
    "rank": 5,
    "users": 0,
    "voteAmount": 0,
    "voteWeight": 0,
  },
  Object {
    "funding": 0,
    "knight": "Redacted",
    "rank": 6,
    "users": 0,
    "voteAmount": 0,
    "voteWeight": 0,
  },
  Object {
    "funding": 0,
    "knight": "Tribe DAO",
    "rank": 7,
    "users": 0,
    "voteAmount": 0,
    "voteWeight": 0,
  },
]
`;

exports[`CitadelController GET /citadel/v1/rewards returns added rewards list 1`] = `
Array [
  Object {
    "account": "0xA967Ba66Fb284EC18bbe59f65bcf42dD11BA8128",
    "amount": 0.0005,
    "block": 14660858,
    "dataType": "0xf77bf06a76db4cf3e47e00a798e7dfb217e3fd61b63ce0ec4c447f3648d86404",
    "epoch": 0,
    "finishTime": 1652800517,
    "payType": "added",
    "startTime": 1650985781,
    "token": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
  },
  Object {
    "account": "0xA967Ba66Fb284EC18bbe59f65bcf42dD11BA8128",
    "amount": 0.001,
    "block": 14660904,
    "dataType": "0xaf388c3c3157dbb1999fecd2348a129dd286852ceddb9352feabbffbac7ca99b",
    "epoch": 0,
    "finishTime": 1652801111,
    "payType": "added",
    "startTime": 1650985782,
    "token": "0xaE96fF08771a109dc6650a1BdCa62F2d558E40af",
  },
  Object {
    "account": "0x594691aEa75080dd9B3e91e648Db6045d4fF6E22",
    "amount": 437.7130677910053,
    "block": 14672580,
    "dataType": "0xaf388c3c3157dbb1999fecd2348a129dd286852ceddb9352feabbffbac7ca99b",
    "epoch": 1,
    "finishTime": 1652967937,
    "payType": "added",
    "startTime": 1650985783,
    "token": "0xa0FFfb6b575045f215432b3158Ffd0A9ee0454B9",
  },
]
`;

exports[`CitadelController GET /citadel/v1/rewards returns added rewards list filtered on account 1`] = `
Array [
  Object {
    "account": "0xA967Ba66Fb284EC18bbe59f65bcf42dD11BA8128",
    "amount": 0.0005,
    "block": 14660858,
    "dataType": "0xf77bf06a76db4cf3e47e00a798e7dfb217e3fd61b63ce0ec4c447f3648d86404",
    "epoch": 0,
    "finishTime": 1652800517,
    "payType": "added",
    "startTime": 1650985781,
    "token": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
  },
  Object {
    "account": "0xA967Ba66Fb284EC18bbe59f65bcf42dD11BA8128",
    "amount": 0.001,
    "block": 14660904,
    "dataType": "0xaf388c3c3157dbb1999fecd2348a129dd286852ceddb9352feabbffbac7ca99b",
    "epoch": 0,
    "finishTime": 1652801111,
    "payType": "added",
    "startTime": 1650985782,
    "token": "0xaE96fF08771a109dc6650a1BdCa62F2d558E40af",
  },
]
`;

exports[`CitadelController GET /citadel/v1/rewards returns added rewards list filtered on epoch 1`] = `
Array [
  Object {
    "account": "0xA967Ba66Fb284EC18bbe59f65bcf42dD11BA8128",
    "amount": 0.0005,
    "block": 14660858,
    "dataType": "0xf77bf06a76db4cf3e47e00a798e7dfb217e3fd61b63ce0ec4c447f3648d86404",
    "epoch": 0,
    "finishTime": 1652800517,
    "payType": "added",
    "startTime": 1650985781,
    "token": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
  },
  Object {
    "account": "0xA967Ba66Fb284EC18bbe59f65bcf42dD11BA8128",
    "amount": 0.001,
    "block": 14660904,
    "dataType": "0xaf388c3c3157dbb1999fecd2348a129dd286852ceddb9352feabbffbac7ca99b",
    "epoch": 0,
    "finishTime": 1652801111,
    "payType": "added",
    "startTime": 1650985782,
    "token": "0xaE96fF08771a109dc6650a1BdCa62F2d558E40af",
  },
  Object {
    "account": "0x594691aEa75080dd9B3e91e648Db6045d4fF6E22",
    "amount": 437.7130677910053,
    "block": 14672580,
    "dataType": "0xaf388c3c3157dbb1999fecd2348a129dd286852ceddb9352feabbffbac7ca99b",
    "epoch": 1,
    "finishTime": 1652967937,
    "payType": "added",
    "startTime": 1650985783,
    "token": "0xa0FFfb6b575045f215432b3158Ffd0A9ee0454B9",
  },
]
`;

exports[`CitadelController GET /citadel/v1/rewards returns added rewards list filtered on token 1`] = `
Array [
  Object {
    "account": "0x594691aEa75080dd9B3e91e648Db6045d4fF6E22",
    "amount": 437.7130677910053,
    "block": 14672580,
    "dataType": "0xaf388c3c3157dbb1999fecd2348a129dd286852ceddb9352feabbffbac7ca99b",
    "epoch": 1,
    "finishTime": 1652967937,
    "payType": "added",
    "startTime": 1650985783,
    "token": "0xa0FFfb6b575045f215432b3158Ffd0A9ee0454B9",
  },
]
`;

exports[`CitadelController GET /citadel/v1/rewards returns paid rewards list 1`] = `
Array [
  Object {
    "account": "0xA967Ba66Fb284EC18bbe59f65bcf42dD11BA8128",
    "amount": 0.0005,
    "block": 14660858,
    "dataType": "0xf77bf06a76db4cf3e47e00a798e7dfb217e3fd61b63ce0ec4c447f3648d86404",
    "epoch": 0,
    "finishTime": 1652800517,
    "payType": "added",
    "startTime": 1650985781,
    "token": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
  },
  Object {
    "account": "0xA967Ba66Fb284EC18bbe59f65bcf42dD11BA8128",
    "amount": 0.001,
    "block": 14660904,
    "dataType": "0xaf388c3c3157dbb1999fecd2348a129dd286852ceddb9352feabbffbac7ca99b",
    "epoch": 0,
    "finishTime": 1652801111,
    "payType": "added",
    "startTime": 1650985782,
    "token": "0xaE96fF08771a109dc6650a1BdCa62F2d558E40af",
  },
  Object {
    "account": "0x594691aEa75080dd9B3e91e648Db6045d4fF6E22",
    "amount": 437.7130677910053,
    "block": 14672580,
    "dataType": "0xaf388c3c3157dbb1999fecd2348a129dd286852ceddb9352feabbffbac7ca99b",
    "epoch": 1,
    "finishTime": 1652967937,
    "payType": "added",
    "startTime": 1650985783,
    "token": "0xa0FFfb6b575045f215432b3158Ffd0A9ee0454B9",
  },
]
`;

exports[`CitadelController GET /citadel/v1/rewards should throw NotFound for unknown filter 1`] = `
Object {
  "message": "Unknown filter unknown",
}
`;

exports[`CitadelController GET /citadel/v1/summary returns protocol aggregate rewards information 1`] = `
Object {
  "lockingApr": 1672009.2017791115,
  "lockingAprSources": Object {
    "0": 0,
    "1": 0,
    "2": 0,
    "3": 1672009.2017791115,
  },
  "stakingApr": 2498.4764247727794,
  "tokensPaid": Object {},
  "valuePaid": 0,
}
`;

exports[`CitadelController GET /citadel/v1/treasury returns the current citadel treasury summary 1`] = `
Object {
  "address": "0xb7Bf6c956da0f013BC59ecDB0748f73d0473cd3a",
  "fundingBps": 4000,
  "lockingBps": 3000,
  "marketCap": 309486236.0874132,
  "marketCapToTreasuryRatio": 1126133.0423130456,
  "positions": Array [
    Object {
      "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
      "apr": 0,
      "balance": 4,
      "decimals": 18,
      "name": "Badger",
      "protocol": "none",
      "symbol": "BADGER",
      "value": 23.48,
    },
    Object {
      "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
      "apr": 0,
      "balance": 0.002,
      "decimals": 8,
      "name": "Wrapped BTC",
      "protocol": "none",
      "symbol": "WBTC",
      "value": 60.212,
    },
    Object {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "apr": 0,
      "balance": 0.025,
      "decimals": 18,
      "name": "Wrapped Ether",
      "protocol": "none",
      "symbol": "WETH",
      "value": 50.6445,
    },
  ],
  "staked": 123433.75281462506,
  "stakedPercent": 57.21943985085593,
  "stakingBps": 3000,
  "supply": 215719.96009810406,
  "value": 150000,
  "valueBtc": 272.72727272727275,
  "valuePaid": 0,
  "valuePaidBtc": 0,
  "yield": 150,
}
`;
